Apply typescript, and dotenv
