# swagger.yaml
@@ -17,7 +17,7 @@ servers:
     description: Internal staging server for devs
 
 paths:
-  /nowplaying/{offset}:
+  /api/list/nowplaying/{offset}:
     get:
       summary: Get a list of movies that are currently in theatres.
       description: Get a list of movies that are currently in theatres. Using offset to handle how many items wants to return. If offset is undefined or null return the original list.
@@ -39,7 +39,7 @@ paths:
               example: [{ "id": 575264,  "cast": [{"name": "Tom Cruise","character": "Ethan Hunt",    "pathImage": "/8qBylBsQf4llkGrWR3qAsOtOU8O.jpg" }], "genres": "Action, Thriller, Adventure", "overview": "Ethan Hunt and his IMF team embark on their most dangerous mission yet: To track down a terrifying new weapon that threatens all of humanity before it falls into the wrong hands. With control of the future and the world's fate at stake and dark forces from Ethan's past closing in, a deadly race around the globe begins. Confronted by a mysterious, all-powerful enemy, Ethan must consider that nothing can matter more than his mission—not even the lives of those he cares about most.", "pathBackgroud": "/628Dep6AxEtDxjZoGP78TsOxYbK.jpg","posterPath": "/NNxYkU70HPurnNCSiCjYAmacwm.jpg","releaseYear": "2023","runtime": 164,"score": "7.82", "title": "Mission: Impossible - Dead Reckoning Part One"}]
         404:
           description: "Error trying to get a list of movies that are currently in theatres."
-  /toprated:
+  /api/list/toprated:
     get:
       summary: Get a list of movies ordered by rating.
       description: Get a list of movies ordered by rating.
@@ -53,7 +53,7 @@ paths:
               example: [{ "id": 575264,  "cast": [{"name": "Tom Cruise","character": "Ethan Hunt",    "pathImage": "/8qBylBsQf4llkGrWR3qAsOtOU8O.jpg" }], "genres": "Action, Thriller, Adventure", "overview": "Ethan Hunt and his IMF team embark on their most dangerous mission yet: To track down a terrifying new weapon that threatens all of humanity before it falls into the wrong hands. With control of the future and the world's fate at stake and dark forces from Ethan's past closing in, a deadly race around the globe begins. Confronted by a mysterious, all-powerful enemy, Ethan must consider that nothing can matter more than his mission—not even the lives of those he cares about most.", "pathBackgroud": "/628Dep6AxEtDxjZoGP78TsOxYbK.jpg","posterPath": "/NNxYkU70HPurnNCSiCjYAmacwm.jpg","releaseYear": "2023","runtime": 164,"score": "7.82", "title": "Mission: Impossible - Dead Reckoning Part One"}]
         404:
           description: "Error trying to get a list of movies ordered by rating."        
-  /mostpopular:
+  /api/list/mostpopular:
     get:
       summary: Get a list of movies ordered by popularity.          
       description: Get a list of movies ordered by popularity.
@@ -67,7 +67,7 @@ paths:
               example: [{ "id": 575264,  "cast": [{"name": "Tom Cruise","character": "Ethan Hunt",    "pathImage": "/8qBylBsQf4llkGrWR3qAsOtOU8O.jpg" }], "genres": "Action, Thriller, Adventure", "overview": "Ethan Hunt and his IMF team embark on their most dangerous mission yet: To track down a terrifying new weapon that threatens all of humanity before it falls into the wrong hands. With control of the future and the world's fate at stake and dark forces from Ethan's past closing in, a deadly race around the globe begins. Confronted by a mysterious, all-powerful enemy, Ethan must consider that nothing can matter more than his mission—not even the lives of those he cares about most.", "pathBackgroud": "/628Dep6AxEtDxjZoGP78TsOxYbK.jpg","posterPath": "/NNxYkU70HPurnNCSiCjYAmacwm.jpg","releaseYear": "2023","runtime": 164,"score": "7.82", "title": "Mission: Impossible - Dead Reckoning Part One"}]
         404:
           description: "Error trying to get a list of movies ordered by popularity."        
-  /detail/{id}:
+  /api/detail/{id}:
     get: 
       summary: Get the top level details of a movie by ID.
       description: Get the top level details of a movie by ID.
